# Mascal

./: .LICENSE  .gitignore  Cargo.toml  MAKEFILE  README.md
benches/: lexer_bench.rs
docs/: Getting Started.md
src/: ast.rs  defs.rs  language_pipeline.rs  lexer.rs  lib.rs  main.mascal  main.rs  parser.rs  runtime.rs  semantic_analysis.rs  test.mascal
src/defs/: binding_power.rs  blocks.rs  builtins.rs  declerations.rs  dynamic_int.rs  errors.rs  expressions.rs  literal.rs  loop_flags.rs  operators.rs  statements.rs  token.rs  types.rs
src/defs/builtins/: builtin_functions.rs  utils.rs
src/parser/: error_checking.rs  parse_executable_block.rs  parse_expression.rs  parse_function.rs  parse_program.rs  parse_statement.rs  parse_variable_decl.rs  parse_variables.rs  utils.rs
src/parser/parse_expression/: loop_flags.rs  parse_callable.rs  (+5 more)
src/runtime/: execute_binary_expression.rs  execute_builtin_function.rs  execute_declaration_statement.rs  execute_expression.rs  execute_function_expression.rs  execute_inner_member_expression.rs  execute_statement.rs  execute_typecast.rs  execute_unary_expression.rs  utils.rs  value_operations.rs  values.rs  variable_table.rs
src/semantic_analysis/: check_parameters_declaration.rs  variable_check_stage.rs
tests/lexer/: comments.rs  groups.rs  identifiers.rs  keywords.rs  misc.rs  mod.rs  numbers.rs  practical.rs  test_unknown.rs  types.rs
tests/parser/: mod.rs  parse_conditional_statement.rs  parse_declare_statement.rs  parse_for_statements.rs  parse_function.rs  parse_throw_statement.rs  parse_while_statements.rs
(+10 files in other folders)
