[package]
name = "mascal"
version = "0.1.0"
edition = "2024"
authors = ["McBrincie212"]
license = "MIT"
categories = ["parsing", "compilers", "parser-implementations"]

[dependencies]
regex = "1.11.1"
once_cell = "1.18"
num-traits = "0.2.19"
rand = "0.9.1"
rustc-hash = "2.1.1"

[profile.profiling]
inherits = "release"
debug = 1

[profile.release]
lto = true
codegen-units = 1