[package]
name = "mascal"
version = "0.1.0"
edition = "2024"
authors = ["McBrincie212"]
license = "MIT"
categories = ["parsing", "compilers", "parser-implementations"]

[dependencies]
once_cell = "1.18"
num-traits = "0.2.19"
rand = "0.9.1"
rustc-hash = "2.1.1"
logos = "0.15.0"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "lexer_bench"
harness = false


[profile.profiling]
inherits = "release"
debug = 1

[profile.release]
lto = true
codegen-units = 1
